--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -42,6 +42,10 @@
     box-shadow: 0 0 1px black;
   }
 
+  .icon._user {
+    transform: translate(0, 0) scale(1.725);
+  }
+
   .follow-menu-item {
     padding: 0 8px;
     min-width: 34px;
