Unify popup menu toggles

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -365,6 +365,7 @@ button[type=submit]:where(:not(._inline)) {
   &:not(.last-clicked) {
     .popup-menu {
       display: none;
+      content-visibility: hidden;
     }
   }
 
