--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -1,14 +1,14 @@
-.modal-toggle:not(:checked) + div {
-  display: none;
-  content-visibility: hidden;
-}
-
 .modal {
   position: fixed;
   inset: 0;
   z-index: 1000;
   line-height: 1.3;
   contain: content; // Improve performance
+
+  &:not(._open) {
+    display: none;
+    content-visibility: hidden;
+  }
 
   input[type=text] {
     width: 100%;
