--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -151,10 +151,10 @@ b {
 details {
   summary {
     cursor: pointer;
+  }
 
-    + * {
-      margin-top: 2px;
-    }
+  > :not([class]) {
+    margin-top: 2px;
   }
 }
 
