Refactor follows/reminder/checkmark on cards
And removed the sibling selectors too.

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -20,6 +20,15 @@
   margin-top: 2rem;
 }
 
+.card__followed-icon,
+.card__reminder-icon {
+  font-size: 75%;
+}
+
+.card__checkmark-icon {
+  font-size: 87.5%;
+}
+
 .card {
   position: relative;
   border-radius: var(--layout-border-radius-small);
@@ -41,6 +50,42 @@
     .card__overlay-infobox {
       display: flex;
       content-visibility: visible;
+    }
+  }
+
+  &.has-follow {
+    .popup-menu .popup-action-follow {
+      display: none;
+    }
+  }
+
+  &:not(.has-follow) {
+    :is(.popup-action-unfollow, .card__followed-icon) {
+      display: none;
+    }
+  }
+
+  &.has-reminder {
+    .popup-menu .popup-action-reminder {
+      display: none;
+    }
+  }
+
+  &:not(.has-reminder) {
+    :is(.popup-action-forget, .card__reminder-icon) {
+      display: none;
+    }
+  }
+
+  &.has-checkmark {
+    .popup-menu .popup-action-mark-read {
+      display: none;
+    }
+  }
+
+  &:not(.has-checkmark) {
+    :is(.popup-action-mark-unread, .card__checkmark-icon) {
+      display: none;
     }
   }
 
@@ -168,33 +213,6 @@
 
     .popup-menu {
       right: .75rem;
-    }
-  }
-
-  &__reminder-icon {
-    font-size: 75%;
-
-    &.hidden ~ .popup-menu .popup-action-forget,
-    &:not(.hidden) ~ .popup-menu .popup-action-reminder {
-      display: none;
-    }
-  }
-
-  &__read-icon {
-    font-size: 87.5%;
-
-    &.hidden ~ .popup-menu .popup-action-mark-unread,
-    &:not(.hidden) ~ .popup-menu .popup-action-mark-read {
-      display: none;
-    }
-  }
-
-  &__followed-icon {
-    font-size: 75%;
-
-    &.hidden ~ .popup-menu .popup-action-unfollow,
-    &:not(.hidden) ~ .popup-menu .popup-action-follow {
-      display: none;
     }
   }
 
