--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -9,7 +9,10 @@
   background-color: transparent;
   color: inherit;
   font-family: var(--ff-base);
+  font-size: inherit;
   font-weight: var(--font-weight-normal);
+  line-height: inherit;
+  text-align: left;
   border-style: solid;
 }
 
