Fix story footer checkmark
Again. I swear I'm good at this!

--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -337,8 +337,11 @@ $header_breakpoint: 640px;
     }
 
     button.checkmark {
-      margin-left: 1.25rem;
-      margin-right: 0;
+      color: var(--fg-600);
+      font-size: 18px;
+      padding: 0 4px;
+      margin: 0 0 0 1.25rem;
+      // margin-right: 0;
     }
 
     > span {
