Improve footer menu
No more weird wrapping and better render performance too.

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -33,8 +33,9 @@
 
   &__menu {
     &-list {
-      display: flex;
-      justify-content: center;
+      &-item {
+        display: inline-block;
+      }
     }
   }
 
