Narrow down CSS selector
For an impossible to perceive performance increase.

--- a/src/scss/_statistics.scss
+++ b/src/scss/_statistics.scss
@@ -14,7 +14,7 @@
     border-radius: var(--layout-border-radius-small);
     padding: 3px 6px;
 
-    > * {
+    > :is(strong, span) {
       display: block;
       text-align: center;
     }
