Rename .blog class to .blog-posts
Avoid conflict with the body blog class from WP.

--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -1,4 +1,4 @@
-.blog:not(._nested) {
+.blog-posts:not(._nested) {
   &:first-child {
     padding-top: var(--layout-spacing-vertical);
   }
@@ -8,13 +8,13 @@
   }
 }
 
-.blog._nested {
+.blog-posts._nested {
   .pagination {
     margin-top: -1rem;
   }
 }
 
-:is(.blog, .latest-posts) {
+:is(.blog-posts, .latest-posts) {
   .post {
     padding-bottom: 1rem;
 
